@@ -1,7 +1,7 @@
 /*
  * MIT License
  *
- * Copyright (c) 2022-2023 Overrun Organization
+ * Copyright (c) 2022-2024 Overrun Organization
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -71,23 +71,23 @@ public sealed class GL33C extends GL32C permits GL40C {
     static void load(GLCapabilities caps, GLLoadFunc load) {
         caps.glBindFragDataLocationIndexed = load.invoke("glBindFragDataLocationIndexed", IIIPV);
         caps.glBindSampler = load.invoke("glBindSampler", IIV);
-        caps.glDeleteSamplers = load.trivialHandle("glDeleteSamplers", IPV);
-        caps.glGenSamplers = load.trivialHandle("glGenSamplers", IIPV);
-        caps.glGetFragDataIndex = load.trivialHandle("glGetFragDataIndex", IPI);
-        caps.glGetQueryObjecti64v = load.trivialHandle("glGetQueryObjecti64v", IIPV);
-        caps.glGetQueryObjectui64v = load.trivialHandle("glGetQueryObjectui64v", IIPV);
-        caps.glGetSamplerParameterIiv = load.trivialHandle("glGetSamplerParameterIiv", IIPV);
-        caps.glGetSamplerParameterIuiv = load.trivialHandle("glGetSamplerParameterIuiv", IIPV);
-        caps.glGetSamplerParameterfv = load.trivialHandle("glGetSamplerParameterfv", IIPV);
-        caps.glGetSamplerParameteriv = load.trivialHandle("glGetSamplerParameteriv", IIPV);
-        caps.glIsSampler = load.trivialHandle("glIsSampler", IZ);
+        caps.glDeleteSamplers = load.invoke("glDeleteSamplers", IPV);
+        caps.glGenSamplers = load.invoke("glGenSamplers", IIPV);
+        caps.glGetFragDataIndex = load.invoke("glGetFragDataIndex", IPI);
+        caps.glGetQueryObjecti64v = load.invoke("glGetQueryObjecti64v", IIPV);
+        caps.glGetQueryObjectui64v = load.invoke("glGetQueryObjectui64v", IIPV);
+        caps.glGetSamplerParameterIiv = load.invoke("glGetSamplerParameterIiv", IIPV);
+        caps.glGetSamplerParameterIuiv = load.invoke("glGetSamplerParameterIuiv", IIPV);
+        caps.glGetSamplerParameterfv = load.invoke("glGetSamplerParameterfv", IIPV);
+        caps.glGetSamplerParameteriv = load.invoke("glGetSamplerParameteriv", IIPV);
+        caps.glIsSampler = load.invoke("glIsSampler", IZ);
         caps.glQueryCounter = load.invoke("glQueryCounter", IIV);
-        caps.glSamplerParameterIiv = load.trivialHandle("glSamplerParameterIiv", IIPV);
-        caps.glSamplerParameterIuiv = load.trivialHandle("glSamplerParameterIuiv", IIPV);
-        caps.glSamplerParameterf = load.trivialHandle("glSamplerParameterf", IIFV);
-        caps.glSamplerParameterfv = load.trivialHandle("glSamplerParameterfv", IIPV);
-        caps.glSamplerParameteri = load.trivialHandle("glSamplerParameteri", IIIV);
-        caps.glSamplerParameteriv = load.trivialHandle("glSamplerParameteriv", IIPV);
+        caps.glSamplerParameterIiv = load.invoke("glSamplerParameterIiv", IIPV);
+        caps.glSamplerParameterIuiv = load.invoke("glSamplerParameterIuiv", IIPV);
+        caps.glSamplerParameterf = load.invoke("glSamplerParameterf", IIFV);
+        caps.glSamplerParameterfv = load.invoke("glSamplerParameterfv", IIPV);
+        caps.glSamplerParameteri = load.invoke("glSamplerParameteri", IIIV);
+        caps.glSamplerParameteriv = load.invoke("glSamplerParameteriv", IIPV);
         caps.glVertexAttribDivisor = load.invoke("glVertexAttribDivisor", IIV);
         caps.glVertexAttribP1ui = load.invoke("glVertexAttribP1ui", IIZIV);
         caps.glVertexAttribP1uiv = load.invoke("glVertexAttribP1uiv", IIZPV);
@@ -112,7 +112,7 @@ public sealed class GL33C extends GL32C permits GL40C {
         final MemoryStack stack = MemoryStack.stackGet();
         final long stackPointer = stack.getPointer();
         try {
-            bindFragDataLocationIndexed(program, colorNumber, index, stack.allocateUtf8String(name));
+            bindFragDataLocationIndexed(program, colorNumber, index, stack.allocateFrom(name));
         } finally {
             stack.setPointer(stackPointer);
         }
@@ -137,7 +137,7 @@ public sealed class GL33C extends GL32C permits GL40C {
     }
 
     public static void deleteSamplers(SegmentAllocator allocator, int[] samplers) {
-        deleteSamplers(samplers.length, allocator.allocateArray(JAVA_INT, samplers));
+        deleteSamplers(samplers.length, allocator.allocateFrom(JAVA_INT, samplers));
     }
 
     public static void deleteSampler(int sampler) {
@@ -160,7 +160,7 @@ public sealed class GL33C extends GL32C permits GL40C {
     }
 
     public static void genSamplers(SegmentAllocator allocator, int[] samplers) {
-        var seg = allocator.allocateArray(JAVA_INT, samplers.length);
+        var seg = allocator.allocateFrom(JAVA_INT, samplers);
         genSamplers(samplers.length, seg);
         RuntimeHelper.toArray(seg, samplers);
     }
@@ -190,7 +190,7 @@ public sealed class GL33C extends GL32C permits GL40C {
         final MemoryStack stack = MemoryStack.stackGet();
         final long stackPointer = stack.getPointer();
         try {
-            return getFragDataIndex(program, stack.allocateUtf8String(name));
+            return getFragDataIndex(program, stack.allocateFrom(name));
         } finally {
             stack.setPointer(stackPointer);
         }
@@ -248,7 +248,7 @@ public sealed class GL33C extends GL32C permits GL40C {
     }
 
     public static void getSamplerParameterIiv(SegmentAllocator allocator, int sampler, int pname, int[] params) {
-        var seg = allocator.allocateArray(JAVA_INT, params.length);
+        var seg = allocator.allocateFrom(JAVA_INT, params);
         getSamplerParameterIiv(sampler, pname, seg);
         RuntimeHelper.toArray(seg, params);
     }
@@ -275,7 +275,7 @@ public sealed class GL33C extends GL32C permits GL40C {
     }
 
     public static void getSamplerParameterIuiv(SegmentAllocator allocator, int sampler, int pname, int[] params) {
-        var seg = allocator.allocateArray(JAVA_INT, params.length);
+        var seg = allocator.allocateFrom(JAVA_INT, params);
         getSamplerParameterIuiv(sampler, pname, seg);
         RuntimeHelper.toArray(seg, params);
     }
@@ -302,7 +302,7 @@ public sealed class GL33C extends GL32C permits GL40C {
     }
 
     public static void getSamplerParameterfv(SegmentAllocator allocator, int sampler, int pname, float[] params) {
-        var seg = allocator.allocateArray(JAVA_FLOAT, params.length);
+        var seg = allocator.allocateFrom(JAVA_FLOAT, params);
         getSamplerParameterfv(sampler, pname, seg);
         RuntimeHelper.toArray(seg, params);
     }
@@ -329,7 +329,7 @@ public sealed class GL33C extends GL32C permits GL40C {
     }
 
     public static void getSamplerParameteriv(SegmentAllocator allocator, int sampler, int pname, int[] params) {
-        var seg = allocator.allocateArray(JAVA_INT, params.length);
+        var seg = allocator.allocateFrom(JAVA_INT, params);
         getSamplerParameteriv(sampler, pname, seg);
         RuntimeHelper.toArray(seg, params);
     }
@@ -374,7 +374,7 @@ public sealed class GL33C extends GL32C permits GL40C {
     }
 
     public static void samplerParameterIiv(SegmentAllocator allocator, int sampler, int pname, int[] param) {
-        samplerParameterIiv(sampler, pname, allocator.allocateArray(JAVA_INT, param));
+        samplerParameterIiv(sampler, pname, allocator.allocateFrom(JAVA_INT, param));
     }
 
     public static void samplerParameterIuiv(int sampler, int pname, MemorySegment param) {
@@ -387,7 +387,7 @@ public sealed class GL33C extends GL32C permits GL40C {
     }
 
     public static void samplerParameterIuiv(SegmentAllocator allocator, int sampler, int pname, int[] param) {
-        samplerParameterIuiv(sampler, pname, allocator.allocateArray(JAVA_INT, param));
+        samplerParameterIuiv(sampler, pname, allocator.allocateFrom(JAVA_INT, param));
     }
 
     public static void samplerParameterf(int sampler, int pname, int param) {
@@ -409,7 +409,7 @@ public sealed class GL33C extends GL32C permits GL40C {
     }
 
     public static void samplerParameterfv(SegmentAllocator allocator, int sampler, int pname, int[] param) {
-        samplerParameterfv(sampler, pname, allocator.allocateArray(JAVA_INT, param));
+        samplerParameterfv(sampler, pname, allocator.allocateFrom(JAVA_INT, param));
     }
 
     public static void samplerParameteri(int sampler, int pname, int param) {
@@ -431,7 +431,7 @@ public sealed class GL33C extends GL32C permits GL40C {
     }
 
     public static void samplerParameteriv(SegmentAllocator allocator, int sampler, int pname, int[] param) {
-        samplerParameteriv(sampler, pname, allocator.allocateArray(JAVA_INT, param));
+        samplerParameteriv(sampler, pname, allocator.allocateFrom(JAVA_INT, param));
     }
 
     public static void vertexAttribDivisor(int index, int divisor) {
@@ -462,7 +462,7 @@ public sealed class GL33C extends GL32C permits GL40C {
     }
 
     public static void vertexAttribP1uiv(SegmentAllocator allocator, int index, int type, boolean normalized, int[] value) {
-        vertexAttribP1uiv(index, type, normalized, allocator.allocateArray(JAVA_INT, value));
+        vertexAttribP1uiv(index, type, normalized, allocator.allocateFrom(JAVA_INT, value));
     }
 
     public static void vertexAttribP2ui(int index, int type, boolean normalized, int value) {
@@ -484,7 +484,7 @@ public sealed class GL33C extends GL32C permits GL40C {
     }
 
     public static void vertexAttribP2uiv(SegmentAllocator allocator, int index, int type, boolean normalized, int[] value) {
-        vertexAttribP2uiv(index, type, normalized, allocator.allocateArray(JAVA_INT, value));
+        vertexAttribP2uiv(index, type, normalized, allocator.allocateFrom(JAVA_INT, value));
     }
 
     public static void vertexAttribP3ui(int index, int type, boolean normalized, int value) {
@@ -506,7 +506,7 @@ public sealed class GL33C extends GL32C permits GL40C {
     }
 
     public static void vertexAttribP3uiv(SegmentAllocator allocator, int index, int type, boolean normalized, int[] value) {
-        vertexAttribP3uiv(index, type, normalized, allocator.allocateArray(JAVA_INT, value));
+        vertexAttribP3uiv(index, type, normalized, allocator.allocateFrom(JAVA_INT, value));
     }
 
     public static void vertexAttribP4ui(int index, int type, boolean normalized, int value) {
@@ -528,6 +528,6 @@ public sealed class GL33C extends GL32C permits GL40C {
     }
 
     public static void vertexAttribP4uiv(SegmentAllocator allocator, int index, int type, boolean normalized, int[] value) {
-        vertexAttribP4uiv(index, type, normalized, allocator.allocateArray(JAVA_INT, value));
+        vertexAttribP4uiv(index, type, normalized, allocator.allocateFrom(JAVA_INT, value));
     }
 }
